[WP-66] [BE] Wellness Challenger는 섭취 음식을 등록한다 - [WP-68] [BE] 테스트 코드