@@ -3,12 +3,15 @@ package com.pixelo.health.wellplate.myhealth.domain.diet.domainservice;
 import com.pixelo.health.wellplate.myhealth.domain.diet.Diet;
 import com.pixelo.health.wellplate.myhealth.domain.diet.domainservice.dto.CreateDietDto;
 import com.pixelo.health.wellplate.myhealth.domain.diet.valueobjects.Food;
+import jakarta.validation.constraints.NotEmpty;
+import jakarta.validation.constraints.NotNull;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class DietFactory {
 
-    public static Diet createDiet(CreateDietDto createDietDto) {
+    public static Diet createDiet(@NotNull CreateDietDto createDietDto) {
         var diet = Diet.builder()
                 .healthId(createDietDto.healthId())
                 .wellnessChallengerId(createDietDto.wellnessChallengerId())
@@ -19,10 +22,10 @@ public class DietFactory {
         return diet;
     }
 
-    private static List<Food> createFoods(List<CreateDietDto.CreateFoodInfoDto> dtos) {
+    private static List<Food> createFoods(@NotEmpty List<CreateDietDto.CreateFoodInfoDto> dtos) {
         return dtos.stream()
                 .map(DietFactory::createFood)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private static Food createFood(CreateDietDto.CreateFoodInfoDto dto) {
